2010-08-12  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (save-image): Fix save-lisp-and-die invocation.
	Based on a patch by Anton Kovalenko.

2010-08-11  Helmut Eller  <heller@common-lisp.net>

	Bind *print-readably* to nil when printing the title.

	* swank.lisp (prepare-title): Factored out into new function.
	(*inspector-printer-bindings*)
	(*inspector-verbose-printer-bindings*): New.
	(with-string-stream): New.
	(emacs-inspect/istate): Renamed from emacs-inspect/printer-bindings.

2010-08-06  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (spawn): Revert the previous change, using
	:use-standard-initial-bindings nil might be not thread-safe.

2010-08-05  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (spawn): Specify
	:use-standard-initial-bindings nil, so that *readtable*
	etc. modifications persist.

2010-08-04  Stas Boukarev  <stassats@gmail.com>

	* swank-allegro.lisp (fspec-definition-locations): Default
	&optional position to 0, otherwise it may cause errors later.
	Reported by: Paulo Madeira.

2010-08-04  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-dispatch-event): :eval-no-wait, lisp sends a
	form in a string, not a function name and arguments. Add
	slime-check-eval-in-emacs-enabled.
	* swank.lisp (defpackage): export eval-for-emacs.

2010-07-30  Helmut Eller  <heller@common-lisp.net>

	Don't get confused by END-OF-FILE on unrelated streams.
	Fixes bug "slime connection broken on trivial condition..."
	Reported by Pascal J. Bourguignon.

	* swank.lisp (end-of-repl-input): New condition.
	(simple-repl, read-non-blocking): Use it.
	* slime.el ([test] end-of-file): Test it.

2010-07-30  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (print-part-to-string): Bind *print-readably* to nil.
	Useful when debugging broken printer methods.

2010-07-22  Vitaly Mayatskikh  <v.mayatskih@gmail.com>

	* swank-lispworks.lisp (list-callers-internal): Fix for LW6.
	(list-callees-internal): New function, use it.
